--- a/14-database.tex
+++ b/14-database.tex
@@ -769,12 +769,11 @@ cur.close()
 
 이들 각각을 순서대로 다룰 것이다.
 
-\subsection{ 데이터베이스 테이블의 제약사항}
+\subsection{데이터베이스 테이블의 제약사항}
 
-As we design our table structures, we can tell the database system 
-that we would like it to enforce a few rules on us.   These rules
-help us from making mistakes and introducing incorrect data into 
-out tables.   When we create our tables:
+테이블 구조를 설계할 때, 데이터베이스 시스템에 몇가지 규칙을 설정할 수 있다.
+이러한 규칙은 실수를 방지하고 잘못된 데이터가 테이블에 들어가는 것을 막는다.
+테이블을 생성할 때:
 
 \beforeverb
 \begin{verbatim}
@@ -785,13 +784,12 @@ cur.execute('''CREATE TABLE IF NOT EXISTS Follows
 \end{verbatim}
 \afterverb
 %
-We indicate that the {\tt name} column in the {\tt People} table must be
-{\tt UNIQUE}.   We also indicate that the combination of the two numbers
-in each row of the {\tt Follows} table must be unique.  These constraints
-keep us from making mistakes such as adding the same relationship more than
-once.
 
-We can take advantage of these constraints in the following code:
+{\tt People} 테이블에 {\tt name} 칼럼이 {\tt 유일(UNIQUE)}함을 나타낸다.
+{\tt Follows} 테이블의 각 행의 두 숫자를 조합의 유일함도 나타낸다.
+하나이상의 동일한 관계를 추가하는 것 같은 실수를 이러한 제약 사항을 통해서 방지한다.
+
+다음 코드에서 이런 제약사항의 이점을 확인할 수 있다.
 
 \beforeverb
 \begin{verbatim}
@@ -800,14 +798,12 @@ cur.execute('''INSERT OR IGNORE INTO People (name, retrieved)
 \end{verbatim}
 \afterverb
 %
-We add the {\tt OR IGNORE} clause to our {\tt INSERT} statement to indicate
-that if this particular {\tt INSERT} would cause a violation of the
-``{\tt name} must be unique'' rule, the database system is allowed to ignore the 
-{\tt INSERT}.  We are using the database constraint as a safety net
-to make sure we don't inadvertently do something incorrect.
 
-Similarly, the following code ensures that we don't add the 
-exact same {\tt Follows} relationship twice.
+{\tt INSERT} 문에 {\tt OR IGNORE} 절을 추가해서 만약 특정 {\tt INSERT}가 
+''{\tt name}이 유일(unique)해야 한다''를 위반하게 되면, 데이터베이스 시스템을 {\tt INSERT}를 무시하게 된다.
+데이터베이스 제약 사항을 안전망으로 사용해서 무언가가 우연히 올바르지 않게 되지 못하게 한다.
+
+마찬가지로, 다음 코드는 정확하게 동일한 {\tt Follows}관계를 두번 추가하지 않게 한다.
 
 \beforeverb
 \begin{verbatim}
@@ -816,36 +812,25 @@ cur.execute('''INSERT OR IGNORE INTO Follows
 \end{verbatim}
 \afterverb
 %
-Again we simply tell the database to ignore our attempted 
-{\tt INSERT} if it would violate the uniqueness constraint
-that we specified for the {\tt Follows} rows.
 
-\subsection{Retrieve and/or insert a record}
+다시한번, {\tt Follows} 행에 대해서 지정한 유일한 제약사항을 위반하게 되면 {\tt INSERT} 시도하는 것을 무시하도록
+데이터베이스에게 지시한다.
 
-When we prompt the user for a Twitter account, if the account 
-exists, we must look up its {\tt id} value.  If the account
-does not yet exist in the {\tt People} table, we must insert 
-the record and get the {\tt id} value from the inserted
-row.
+\subsection{레코드를 가져오거나 삽입하기}
 
-This is a very common pattern and is done twice in the program above.
-This code shows how we look up the {\tt id} for a 
-friend's account when we have extracted a \verb"screen_name"
-from a {\tt user} node in the retrieved Twitter JSON.
+사용자가 트위터 계정을 입력할 때, 만약 계정이 존재한다면, {\tt id} 값을 찾아야 한다.
+만약 {\tt People} 테이블에 계정이 존재하지 않는다면, 레코드를 삽입하고 삽입된 행에서 {\tt id} 값을 얻어야 한다.
 
-Since over time it will be increasingly likely that the account
-will already be in the database, we first check to see if the
-{\tt People} record exists using a {\tt SELECT} statement.
+이것이 매우 일반적인 패턴이고, 상기 프로그램에서 두번 수행되었다. 가져온 트위터 JSON {\tt 사용자(user)} 노드에서 
+\verb"screen_name"을 추출할 때, 친구 계정의 {\tt id}를 어떻게 찾는지 코드가 보여준다.
 
-If all goes well\footnote{In general, when a sentence starts 
-with ``if all goes well'' you will find that the code needs
-to use try/except.} inside the {\tt try} section, we retrieve the
-record using {\tt fetchone()} and then retrieve the
-first (and only) element of the returned tuple and store it in 
-\verb"friend_id".
+시간이 지남에 따라 점점 더 계정이 데이터베이스에 존재할 것 같기 때문에, {\tt SELECT}문을 사용해서 {\tt People} 레코드가 존재하는지 먼저 확인한다.
 
-If the {\tt SELECT} fails, the {\tt fetchone()[0]} code will fail
-and control will transfer into the {\tt except} section.
+{\tt try} 구문 내에서 모든 것이 정상적으로 잘 작동하면\footnote{일반적으로,
+문장이 ''만약 모든 것이 잘 된다면''으로 시작하면, 코드는 필히 try/except를 필요로 한다.}, 
+{\tt fetchone()}을 사용하여 레코드를 가져와서, 반환된 튜플의 첫번째 요소만 읽어오고 \verb"friend_id"에 저장한다.
+
+만약 {\tt SELECT}가 실패하면, {\tt fetchone()[0]} 코드도 실패하고 제어권은 {\tt except} 블록으로 이관된다.
 
 \beforeverb
 \begin{verbatim}
@@ -867,24 +852,19 @@ and control will transfer into the {\tt except} section.
 \end{verbatim}
 \afterverb
 %
-If we end up in the {\tt except} code, it simply means that the row
-was not found so we must insert the row.  We use {\tt INSERT OR 
-IGNORE} just to avoid errors and then call {\tt commit()} to 
-force the database to really be updated.  After the write is done, we can 
-check the {\tt cur.rowcount} to see how many rows were affected.  Since
-we are attempting to insert a single row, if the number of 
-affected rows is something other than one, it is an error.  
 
-If the {\tt INSERT} is successful, we can look at {\tt cur.lastrowid} 
-to find out what value the database assigned to the {\tt id} column in 
-our newly created row.
+{\tt except} 코드에서 끝나게 되면, 행을 찾지 못해서 행을 삽입해야 한다.
+{\tt INSERT OR IGNORE}를 사용해서 오류를 피하고 실질적으로 데이터베이스에 갱신하기 위해서
+{\tt commit()}을 호출한다. 쓰기가 수행된 후에, 얼마나 많은 행이 영향을 받았는지 확인하기 위해서
+{\tt cur.rowcount}로 확인한다. 단지 하나의 행을 삽입하려고 해서, 영향을 받은 행의  숫자가
+1과 다른 무언가라면, 그것은 오류다.
 
-\subsection{Storing the friend relationship}
+{\tt 삽입(INSERT)}이 성공하면, {\tt cur.lastrowid}를 살펴보고 
+신규로 생성된 행의 {\tt id} 열에 무슨 값이 데이터베이에 할당되었는지 알 수 있다.
 
-Once we know the key value for both the Twitter user
-and the friend in the JSON, it is a simple matter to insert
-the two numbers into the {\tt Follows} table
-with the following code:
+\subsection{친구관계 저장하기}
+
+트위터 사용자와 JSON 친구에 대한 키값을 알게되면, 다음 코드로 두 개의 숫자를 {\tt Follows} 테이블에 삽입하는 것은 간단하다.
 
 \beforeverb
 \begin{verbatim}
@@ -893,11 +873,11 @@ cur.execute('INSERT OR IGNORE INTO Follows (from_id, to_id) VALUES (?, ?)',
 \end{verbatim}
 \afterverb
 %
-Notice that we let the database take care of keeping us from ``double-inserting''
-a relationship by creating the table with a uniqueness constraint and then
-adding {\tt OR IGNORE} to our {\tt INSERT} statement.
 
-Here is a sample execution of this program:
+데이터베이스를 생성할 때 유일한 제약조건과 {\tt INSERT}문에 {\tt OR IGNORE}을 추가함으로써 데이터베이스 스스로가 
+관계를 두번 삽입하는 것을 방지하다록 한 것을 주목하세요.
+
+다음 프로그램의 샘플 실행 결과가 있다.
 
 \beforeverb
 \begin{verbatim}
@@ -916,12 +896,10 @@ Enter a Twitter account, or quit: quit
 \end{verbatim}
 \afterverb
 %
-We started with the {\tt drchuck} account and then let the program
-automatically pick the next two accounts to retrieve and add to 
-our database.
 
-The following is the first few rows in the {\tt People} 
-and {\tt Follows} tables after this run is completed:
+{\tt drchuck} 계정으로 시작해서, 프로그램이 자동적으로 다음 두개의 계정을 선택해서 데이터베이스에 추가한다.
+
+다음은 프로그램 수행을 완료한 후에 {\tt People}과 {\tt Follows} 테이블에 첫 몇개의 행이다.
 
 \beforeverb
 \begin{verbatim}
@@ -942,71 +920,50 @@ Follows:
 \end{verbatim}
 \afterverb
 %
-You can see the {\tt id}, {\tt name}, and {\tt visited} fields in the 
-{\tt People} table and you see the numbers of both ends of 
-the relationship {\tt Follows} table.   
-In the {\tt People} table, we can see that the first three people
-have been visited and their data has been retrieved.
-The data in the {\tt Follows} table indicates that
-{\tt drchuck} (user 1) is a friend to all of the people shown in the first
-five rows.  This makes sense because
-the first data we retrieved and stored was the Twitter friends of
-{\tt drchuck}.  If you were to print more rows from the {\tt Follows} table,
-you would see the friends of user two and three as well.
 
-\section{Three kinds of keys}
+{\tt People} 테이블의 {\tt id}, {\tt name}, {\tt visited} 필드와
+{\tt Follows} 테이블 양끝의 관계 숫자를 볼 수 있다.
+{\tt People} 테이블에서, 첫 세명의 사람이 방문되었고, 데이터를 가져온 것을 볼 수 있다.
+{\tt Follows} 테이블의 데이터는 {\tt drchuck} (사용자 1)이 첫 다섯개 행에 보여진 모든 사람에 친구임을 나타낸다.
+이것은 당연한데 왜냐하면 처음 가져와서 저장한 데이터가 {\tt drchuck}의 트위터 친구들이기 때문이다.
+{\tt Follows} 테이블에 좀더 많은 행을 출력하면, 사용자 2, 3 혹은 그 이상의 친구를 볼 수 있다.
 
-Now that we have started building a data model putting our
-data into multiple linked tables, and linking the rows in those
-tables using {\bf keys}, we need to look at some terminology 
-around keys.  There are generally three kinds of keys used 
-in a database model.
+\section{세 종류의 키}
+
+데이터를 다중 연결된 테이블에 넣고 {\bf 키(keys)}를 사용하여 행을 연결하는 데이터 모델을 생성해서,
+키와 관련된 몇몇 용어를 살펴볼 필요가 있다. 일반적으로 데이터베이스 모델에서 사용되는 세가지 종류릐 키가 있다.
 
 \begin{itemize}
 
-\item A {\bf logical key} is a key that the ``real world'' might use
-to look up a row.   In our example data model, the {\tt name}
-field is a logical key.  It is the screen name for the user 
-and we indeed look up a user's row several times in the program
-using the {\tt name} field.  You will often find that it makes
-sense to add a {\tt UNIQUE} constraint to a logical key.  Since the 
-logical key is how we look up a row from the outside world, it makes
-little sense to allow multiple rows with the same value in the table.
+\item {\bf 논리 키(logical key)}는 ''실제 세상''이 행을 찾기 위해서 사용하는 키다.
+데이터 모델 예제에서, {\tt name} 필드는 논리키다. 사용자의 \verb"screen_name"이고,
+{\tt name} 필드를 사용하여 프로그램에서 여러번 사용자의 행을 찾을 수 있다.
+논리 키에 {\tt UNIQUE} 제약 사항을 추가하는 것이 의미있다는 것을 종종 발견한다.
+논리 키는 어떻게 바깥 세상에서 행을 찾는지 다루기 때문에, 테이블에 동일한 값을 가진 다중 행이 존재한다는 것은 의미가 없다.
 
-\item A {\bf primary key} is usually a number that is assigned
-automatically by the database.  It generally has no meaning outside
-the program and is only used to link rows from different tables
-together.  When we want to look up a row in a table, usually 
-searching for the row using the primary key is the fastest 
-way to find a row.  Since primary keys are integer numbers, they 
-take up very little storage and can be compared or sorted very quickly.
-In our data model, the {\tt id} field is an example of a primary key.
+\item {\bf 주키(primary key)}는
+통상적으로 데이터베이스에서 자동으로 할당되는 숫자다.
+프로그램 밖에서는 일반적으로 의미가 없고, 단지 서로 다른 테이블에서 행을 열결할 때만 사용된다.
+테이블에 행을 찾을 때, 통상적으로 주키를 사용해서 행을 찾는 것이 행을 찾는 가장 빠른 방법이다.
+주키는 정수형이어서, 매우 적은 저장공간을 차지하고 매우 빨리 비교 혹은 정렬할 수 있다.
+이번에 사용된 데이터 모델에서 {\tt id} 필드가 주키의 한 예가 된다.
 
-\item A {\bf foreign key} is usually a number that points to the primary key
-of an associated row in a different table.  An example of a foreign
-key in our data model is the \verb"from_id".  
+\item {\bf 외부 키(foreign key)}는 일반적으로 다른 테이블에 연관된 행의 주키를 가리키는 숫자다.
+이번에 사용된 데이터 모델의 외부 키의 사례는 \verb"from_id"다.
 
 \end{itemize}
 
-We are using a
-naming convention of always calling the primary key field name
-{\tt id} and appending the suffix \verb"_id" to any field name
-that is a foreign key.
+주키의 {\tt id}필드명을 호출하고, 항상 외부키에 임의의 필드명에 접미사로 \verb"_id" 붙이는 명명규칙을 사용한다.
 
+\section{JOIN을 사용하여 데이터 가져오기}
 
-\section{Using JOIN to retrieve data}
+데이터 정규화 규칙을 따라서, 데이터를 주키와 외부키로 연결된 두개의 테이블로 나누어서,
+테이블의 데이터를 다시 합치기 위해서 {\tt SELECT}를 작성할 필요가 있다.
 
-Now that we have followed the rules of database normalization
-and have data separated into two tables, linked together using
-primary and foreign keys, we need to be able to build a 
-{\tt SELECT} that re-assembles the data across the tables.
+SQL은 {\tt JOIN}절을 사용해서 테이블을 다시 연결한다. {\tt JOIN}절에서
+테이블 사이의 행을 연결할 필드를 명세한다.
 
-SQL uses the {\tt JOIN} clause to re-connect these tables.  
-In the {\tt JOIN} clause you specify the fields that are used 
-to re-connect the rows between the tables.
-
-The following is an example of a {\tt SELECT} with a 
-{\tt JOIN} clause:
+다음은 {\tt JOIN}절을 가진 {\tt SELECT} 예제이다.
 
 \beforeverb
 \begin{verbatim}
@@ -1015,26 +972,21 @@ SELECT * FROM Follows JOIN People
 \end{verbatim}
 \afterverb
 %
-The {\tt JOIN} clause indicates that the fields we are selecting
-cross both the {\tt Follows} and {\tt People} tables.  The {\tt ON}
-clause indicates how the two tables are to be joined.   Take the rows
-from {\tt Follows} and append the row from {\tt People} where the
-field \verb"from_id" in {\tt Follows} is the same the {\tt id} value
-in the {\tt People} table.
+
+{\tt JOIN}절은 {\tt Follows}와 {\tt People} 테이블에서 선택하는 필드를 나타낸다. 
+{\tt ON}절은 어떻게 두 테이블이 합쳐지는지를 나타낸다.
+{\tt Follows}에서 행을 선택하고 {\tt People}에서 행을 추가하는데, 
+{\tt Follows} 테이블의 \verb"from_id"와 {\tt People} 테이블의 {\tt id} 값이 일치한다.
 
 \beforefig
 \centerline{\includegraphics[height=2.50in]{figs2/join.eps}}
 \afterfig
 
-The result of the JOIN is to create extra-long ``meta-rows'' which have both 
-the fields from {\tt People} and the matching fields from {\tt Follows}.
-Where there is more than one match between the {\tt id} field from {\tt People}
-and the \verb"from_id" from {\tt People}, then JOIN creates a meta-row 
-for \emph{each} of the matching pairs of rows, duplicating data as needed.
+JOIN의 결과는 {\tt People} 테이블의 필드와 {\tt Follows} 테이블에서 매칭되는 필드를 가진 추가로 긴 ''메타-행(meta-row)''을 생성한다.
+{\tt People}테이블의 {\tt id} 필드와 {\tt Follows} 테이블의 \verb"from_id" 사이에 하나 이상의 매칭이 있다면,
+JOIN은 필요하면 데이터를 중복하면서, 행의 매칭되는 짝 행의 각각에 대해 메타-행을 생성한다.
 
-The following code demonstrates the data that we will have in the 
-database after the multi-table Twitter spider program (above) has
-been run several times.
+다중 테이블 트위터 프로그램을 수차례 수행한 후에 데이터베이스에 가지고 있는 데이터를 다음 코드가 시연한다.
 
 \beforeverb
 \begin{verbatim}
@@ -1072,11 +1024,10 @@ cur.close()
 \end{verbatim}
 \afterverb
 %
-In this program, we first dump out the {\tt People}
-and {\tt Follows} and then dump out a subset of the
-data in the tables joined together.
 
-Here is the output of the program:
+이 프로그램에서 {\tt People}과 {\tt Follows} 테이블을 먼저 보여주고, 함께 연결된 데이터의 일부분을 보여준다.
+
+다음이 프로그램 출력이다.
 
 \beforeverb
 \begin{verbatim}
@@ -1105,116 +1056,95 @@ Connections for id=2:
 \end{verbatim}
 \afterverb
 %
-You see the columns from the {\tt People} and {\tt Follows} tables and the last
-set of rows is the result of the {\tt SELECT} with the {\tt JOIN} clause.
 
-In the last select, we are looking for accounts that are friends of 
-``opencontent'' (i.e. {\tt People.id=2}).
+{\tt People}과 {\tt Follows} 테이블에서 열을 볼 수 있고, 마지막 행의 집합이 {\tt JOIN}절의 {\tt SELECT}문의 결과다.
 
-In each of the ``meta-rows'' in the last select, the first two columns are
-from the {\tt Follows}
-table followed by columns three through five from the {\tt People} table.  You can also
-see that the second column (\verb"Follows.to_id") matches the third column
-({\tt People.id}) in each of the joined-up ``meta-rows''.
+마지막 {\tt SELECT}문에서, ``opencontent'' (즉 {\tt People.id=2})를 친구로 가진 계정을 찾는다.
 
-\section{Summary}
+마지막 {\tt SELECT}의 ''메타-행''의 각각에서 첫 두 열은 {\tt Follows} 테이블에서, 3번째부터 5번째 열은 {\tt People}
+테이블에서 왔다. 두번째 열(\verb"Follows.to_id")과 세번째 열({\tt People.id})은 연결된 ''메타-열''에서 매칭됨을 볼 수 있다.
 
-This chapter has covered a lot of ground to give you an overview of the basics
-of using a database in Python.   It is more complicated to write the code to use 
-a database to store data than Python dictionaries or flat files so there is 
-little reason to use a database unless your application truly needs the capabilities
-of a database.  The situations where a database can be quite useful are: 
-(1) when your application needs to make small many random updates within a large data set,
-(2) when your data is so large it cannot fit in a dictionary and you need to 
-look up information repeatedly, or
-(3) you have a long-running process that you want to be able to stop 
-and restart and retain the data from one run to the next.
+\section{요약}
 
-You can build a simple database with a single table to suit many application 
-needs, but most problems will require several tables and links/relationships
-between rows in different tables.   When you start making links between 
-tables, it is important to do some thoughtful design and follow the 
-rules of database normalization to make the best use of the database's
-capabilities.  Since the primary motivation for using a database
-is that you have a large amount of data to deal with, it is important
-to model your data efficiently so your programs run as fast as possible.
+이번 장에서 파이썬 데이터베이스를 사용한 기초 개요에 대해 폭넓게 다루었다.
+파이썬 딕셔너리나 일반적인 파일보다 데이터를 저장하기 위해서 데이터베이스를 사용하는 코드를 작성하는 것은 훨씬 복잡하다.
+그래서, 만약 작성하는 응용프로그램이 실질적으로 데이터베이스 역량을 필요하지 않는다면 데이터베이스를 사용할 이유는 없다.
+데이터베이스가 특히 유용한 상황은 (1) 큰 데이터 세트에서 많은 작은 임의적인 갱신이 필요한 응용프로그램을 작성할 때
+(2) 데이터가 너무 커서 딕셔너리에 담을 수 없고 반복적으로 정보를 찾을 때, (3) 한번 실행에서 다음 실행때까지 데이터를 
+간직하고, 멈추고, 재시작할 수 있는 매우 긴 실행 프로세스를 가질 경우이다.
 
-\section{Debugging}
+많은 응용프로그램의 필요를 맞추기 위해서 하나의 테이블을 가진 간단한 데이터베이스를 구축할 수 있다.
+하지만, 대부분의 문제는 몇개의 테이블과 서로 다른 테이블간에 행이 연결된 관계를 요구한다.
+테이블 사이의 연결을 만들 때, 좀더 사려깊은 설계와 데이터베이스의 역량을 가장 잘 사용할 수 있는 데이터베이스 정규화 규칙을
+따르는 것이 중요하다. 데이터베이스를 사용하는 주요 동기는 처리할 데이터의 양이 많기 때문에, 
+데이터를 효과적으로 모델링해서 프로그램이 가능하면 빠르게 실행되게 만드는 것이 중요하다.
 
-One common pattern when you are developing a Python program to connect to
-an SQLite database will be to run a Python program and check the
-results using the SQLite Database Browser.  The browser allows you 
-to quickly check to see if your program is working properly.
+\section{디버깅}
 
-You must be careful because SQLite takes care to keep two programs
-from changing the same data at the same time.   For example, if
-you open a database in the browser and make a change to the database
-and have not yet pressed the ``save'' button in the browser, the 
-browser ``locks'' the database file and keeping any other program
-from accessing the file.  In particular, your Python program
-will not be able to access the file if it is locked.
+SQLite 데이터베이스에 연결하는 파이썬 프로그램을 개발할 때 하나의 일반적인 패턴은
+파이썬 프로그램을 실행하고 SQLite 데이터베이스 브라우저를 통해서 결과를 확인하는 것이다.
+브라우저를 통해서 빠르게 프로그램이 정상적으로 작동하는지를 확인할 수 있다.
 
-So a solution is to make sure to either close the database browser 
-or use the {\bf File} menu to close the database in the browser
-before you attempt to access the database from Python to avoid
-the problem of your Python code failing because the database is
-locked.
+SQLite가 두 프로그램이 동시에 동일한 데이터를 변경하지 못하게 다루기 때문에 주의가 필요하다.
+예를 들어, 브라우저에서 데이터베이스를 열고 데이터베이스에 변경을 하고 ''저장(save)''버튼을 누르지 않는다면,
+브라우져는 데이터베이스 파일을 ''잠구고(lock)'' 다른 프로그램이 파일에 접근하는 것을 막는다.
+특히, 파일이 잠겨져 있으면 작성하고 있는 파이썬 프로그램이 파일에 접근할 수 없다.
 
-\section{Glossary}
+해결책은 데이터베이스가 잠겨져 있어서 파이썬 코드가 작동하지 않는 문제를 피하기 위해서 파이썬에서 데이터베이스에 접근하려 시도하기 전에
+데이터베이스 브라우져를 닫거나 혹은 {\bf File} 메뉴를 사용해서 브라우져의 데이터베이스를 닫는 것이다.
+
+\section{용어정의}
 
 \begin{description}
 
-\item[attribute:] One of the values within a tuple.  More commonly
-called a ``column'' or ``field''.
+\item[속성(attribute):] 튜플 내부에 값의 하나. 좀더 일반적으로 ''열'', ''칼럼'', ''필드''로 불린다.
 \index{attribute}
 
-\item[constraint:] 
-When we tell the database to enforce a rule on a field or a row
-in a table.  A common constraint is to insist that there can be no
-duplicate values in a particular field (i.e. all the values must be unique).
+\item[제약(constraint):] 
+데이터베이스가 테이블의 필드나 행에 규칙을 강제하는 것.
+일반적인 제약은 특정 필드에 중복된 값이 없도록 하는 것(즉, 모든 값이 유일해야 한다.)
 \index{constraint}
 
-\item[cursor:] A cursor allows you to execute SQL commands in a database
-and retrieve data from the database.  A cursor is similar to 
-a socket or file handle for network connections and files respectively.
+\item[커서(cursor):]
+커서를 사용해서 데이터베이스에서 SQL 명령어를 수행하고 데이터베이스에서 데이터를 가져온다.
+커서는 네트워크 연결을 위한 소켓이나 파일의 파일 핸들러와 유사하다.
 \index{cursor}
 
-\item[database browser:] 
-A piece of software that allows you to directly connect to a database 
-and manipulate the database directly without writing a program.
+\item[데이터베이스 브라우져(database browser):] 
+직접적으로 데이터베이스에 연결하고 프로그램을 작성하지 않고 직접 데이터베이스를 조작할 수 있는 소프트웨어.
 \index{database browser}
 
-\item[foreign key:] A numeric key that points to the primary key of 
-a row in another table.  Foreign keys establish relationships between rows
-stored in different tables.
+\item[외부 키(foreign key):]
+다른 테이블에 있는 행의 주키를 가리키는 숫자 키.
+외부 키는 다른 테이블에 저장된 행사이에 관계를 설정한다.
 \index{foreign key}
 
-\item[index:] Additional data that the database software maintains as rows
-are inserted into a table designed to make lookups very fast.
+\item[인텍스(index):]
+정보를 찾아오는 것을 빠르게 하기 위해서 설계된 행이 테이블에 추가될 때 데이터베이스 소프트웨어가 유지관리하는 추가 데이터.
 \index{index}
 
-\item[logical key:] A key that the ``outside world'' uses to look up a particular
-row.  For example in a table of user accounts, a person's e-mail address
-might be a good candidate as the logical key for the user's data. 
+\item[논리 키(logical key):]
+''외부 세계''가 특정 행의 정보를 찾기 위해서 사용하는 키. 사용자 계정 테이블의 예로,
+사람의 전자우편 주소는 사용자의 데이터에 대한 논리 키의 좋은 후보자가 될 수 있다.
 \index{logical key}
 
-\item[normalization:] Designing a data model so that no data
-is replicated.  We store each item of data at one place in the database
-and reference it elsewhere using a foreign key.
+\item[정규화(normalization):]
+어떠한 데이터도 중복이 없도록 데이터 모델을 설계하는 것.
+데이터베이스의 한 장소에 데이터 각 항목을 저장하고 외부키를 이용하여 다른 곳에서 참조한다.
 \index{normalization}
 \index{database normalization}
 
-\item[primary key:] A numeric key assigned to each row that is used to 
-refer to one row in a table from another table.  Often the database
-is configured to automatically assign primary keys as rows are inserted.
+\item[주키(primary key):]
+다른 테이블에서 테이블의 한 행을 참조하기 위해서 각 행에 할당된 숫자 키.
+종종 데이터베이스는 행이 삽입될 때 주키를 자동적으로 할당하도록 설정되었다.
 \index{primary key}
 
-\item[relation:] An area within a database that contains tuples and 
-attributes.  More typically called a ``table''.
+\item[관계(relation):]
+튜플과 속성을 담고있는 데이터베이스 내부 영역. 좀더 일반적으로 ''테이블(table)''이라고 한다.
 \index{relation}
 
-\item[tuple:] A single entry in a database table that is a set 
-of attributes.  More typically called ``row''.
+\item[튜플(tuple):]
+데이터베이스 테이블에서 속성 집합인 단일 항목. 좀더 일반적으로 ''행(row)''이라고 한다.
 \index{tuple}
 
 \end{description}
